2011-06-29  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r89888.
        http://trac.webkit.org/changeset/89888
        https://bugs.webkit.org/show_bug.cgi?id=63609

         "Seems to be causing merging issues on the dashboard, e.g.
        http://test-
        results.appspot.com/dashboards/flakiness_dashboard.html#group=%40ToT%20-%20chromium.org&tests=fast%2Fcanvas"
        (Requested by aboxhall on #webkit).

        * Scripts/webkitpy/layout_tests/layout_package/json_layout_results_generator.py:
        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator.py:
        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator_unittest.py:

2011-06-29  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Martin Robinson.

        [webkitpy] Executive.running_pids() sometimes doesn't correctly process "ps" output
        https://bugs.webkit.org/show_bug.cgi?id=63624

        * Scripts/webkitpy/common/system/executive.py: In some cases the
        ps output lines can contain one or more leading white-spaces, so
        strip it before splitting the pid and command name.

2011-06-29  Noel Gordon  <noel.gordon@gmail.com>

        Reviewed by Kent Tamura.

        [Chromium] [DRT] ImageDiff should compile in VS2010
        https://bugs.webkit.org/show_bug.cgi?id=63614

        * DumpRenderTree/chromium/ImageDiff.cpp: Include <iterator> for back_inserter.

2011-06-27  Diego Gonzalez  <diegohcg@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT support for setInteractiveFormValidationEnabled
        https://bugs.webkit.org/show_bug.cgi?id=63496

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::DumpRenderTree):

2011-06-28  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Make new-run-webkit-tests -2 actually use WebKitTestRunner
        https://bugs.webkit.org/show_bug.cgi?id=63572
