@@ -1,3 +1,15 @@
+2011-06-29  Xan Lopez  <xlopez@igalia.com>
+
+        Reviewed by Adam Barth.
+
+        [GTK] overlapping drag&drop tests fail on NRWT
+        https://bugs.webkit.org/show_bug.cgi?id=57640
+
+        Make a GTK test driver that spawns one Xvfb instance per
+        thread. This avoids bad interactions in DnD tests between threads.
+
+        * Scripts/webkitpy/layout_tests/port/gtk.py:
+
 2011-06-29  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r89888.
